@@ -87,6 +87,8 @@ d	direction (normalized)
 .IP
 v	value (radiance)
 .IP
+V	contribution (radiance)
+.IP
 w	weight
 .IP
 W	color coefficient
